namespace FactoryMethod;

public enum Currency
{
    USD,
    EUR,
    GBP
}