namespace FactoryMethod;

public enum PaymentType
{
    PayPall,
    CreditCard,
    Blik
}